Add News Sentiment Analysis feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,10 @@
         <div id="dashboard-container" class="hidden">
             <h2 id="company-name"></h2>
             
+            <div id="sentiment-section">
+                Market Sentiment: <span id="sentiment-badge" class="badge">Loading...</span>
+            </div>
+
             <div id="price-display">
                 Current Price: <span id="current-price"></span>
             </div>
